--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">1LabJurele</string>
+    <string name="btn_do">Paspausk</string>
+    <string name="text_view">Pirmas Laboratorinis</string>
+
 </resources>
