Patobulinau kintamuju vardus bei padariau, kad paspaudus mygtuka, pasikeistu tekstas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">1LabJurele</string>
     <string name="btn_do">Paspausk</string>
-    <string name="text_view">Pirmas Laboratorinis</string>
+    <string name="txt_show">Sveiki, cia 1 Lab</string>
+    <string name="txt_changed">Tekstas pasikeite!</string>
 
 </resources>
