--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">1LabJurele</string>
-    <string name="btn_do">Paspausk</string>
+    <string name="btn_do">Pakeisti</string>
+    <string name="btn_paint">Spalvinti</string>
+    <string name="btn_begin">Pradzia</string>
     <string name="txt_show">Sveiki, cia 1 Lab</string>
     <string name="txt_changed">Tekstas pasikeite!</string>
 
