Revert "Ivedziau papildoma zodi, o git'e atliksiu revert code changes"
This reverts commit 4b638a4b

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="btn_do">Pakeisti</string>
     <string name="btn_paint">Spalvinti</string>
     <string name="btn_begin">Pradzia</string>
-    <string name="txt_show">Sveiki, cia 1 Lab. Pakeitimui</string>
+    <string name="txt_show">Sveiki, cia 1 Lab</string>
     <string name="txt_changed">Tekstas pasikeite!</string>
 
 </resources>
